<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--android:background="?attr/background_color"-->

        <!--<androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="69dp"
            android:text="Mode " />-->

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/dane_napis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:text="@string/dane"
            android:textColor="#808080" />

        <EditText
            android:id="@+id/dane"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/dane_napis"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/imi_i_nazwisko"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/dane"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/telefon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/telefon"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="9"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ilosc_napis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telefon"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/ilo"
            android:textColor="#808080" />

        <com.google.android.material.slider.Slider
            android:id="@+id/ilosc_slider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ilosc_napis"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="10" />

        <TextView
            android:id="@+id/dodatki_napis"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ilosc_slider"
            android:layout_marginStart="40dp"
            android:textColor="#808080"
            android:text="@string/dodatki"/>

        <CheckBox
            android:id="@+id/myszka_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dodatki_napis"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/myszka"
            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/myszka_checkbox"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/klawiatura_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner2"
            android:layout_marginStart="40dp"
            android:checked="true"
            android:layout_marginTop="20dp"
            android:text="@string/klawiatura"
            />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/klawiatura_checkbox"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp" />

        <CheckBox
            android:id="@+id/kamera_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner3"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/kamera_internetowa"
            />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_below="@id/kamera_checkbox"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/cena_napis"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner4"
            android:layout_marginStart="40dp"
            android:textColor="#808080"
            android:text="@string/cena_z"/>

        <TextView
            android:id="@+id/cena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/cena_napis"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/cena_napis"
            android:textColor="#808080"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dodaj"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/cena"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/zam_w"
            android:textSize="15sp" />

    </RelativeLayout>


</ScrollView>