<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/id_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/imie_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="Imię1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cena_napis1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:text="@string/cena_napis"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cena_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Cena1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pc_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:text="Pc1"
            android:textSize="10dp"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/ilosc_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:text="Ilość1"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/pc_zamowienia"
            app:layout_constraintStart_toStartOf="@+id/pc_zamowienia"
            app:layout_constraintTop_toBottomOf="@+id/pc_zamowienia" />

        <TextView
            android:id="@+id/ilosc_napis1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="60dp"
            android:textSize="15dp"
            android:text="X"
            app:layout_constraintEnd_toEndOf="@+id/pc_zamowienia"
            app:layout_constraintStart_toStartOf="@+id/pc_zamowienia"
            app:layout_constraintTop_toBottomOf="@+id/pc_zamowienia" />

        <TextView
            android:id="@+id/dodatki_napis1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="125dp"
            android:text="@string/dodatki_napis"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/myszka_napis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="100dp"
            android:text="@string/myszka_napis"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/klawa_napis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="130dp"
            android:text="@string/klawiatura_napis"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/kamera_napis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="160dp"
            android:text="@string/kamera"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/klawiatura_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Klawiatura1"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="130dp"
            android:textSize="10dp"/>

        <TextView
            android:id="@+id/kamera_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:text="Kamera1"
            android:textSize="10dp"
            android:layout_marginTop="160dp"/>

        <TextView
            android:id="@+id/myszka_zamowienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="100dp"
            android:text="Myszka1"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pc_zamowienia"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_napis1"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/email_napis"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_zamowienia"
            android:layout_width="150dp"
            android:layout_height="19dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="25dp"
            android:text="Email1"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telefon_napis1"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="25dp"
            android:text="@string/numer_telefonu"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telefon_zamowienia"
            android:layout_width="70dp"
            android:layout_height="19dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="25dp"
            android:text="Telefon1"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/data_napis1"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/data_napis"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/data_zamowienia"
            android:layout_width="200dp"
            android:layout_height="19dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="40dp"
            android:text="Data1"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>